--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         body {
             width: 100vw;
             height: 100vh;
-            object-fit: cover;
+            overflow: hidden;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -86,7 +86,7 @@
         }
 
         .profile-image {
-            width: 100%;
+            width:  78%;
             height: auto;
             object-fit: contain;
             max-height: 1100px;
@@ -103,7 +103,7 @@
 
         .location {
             font-family: 'Freesentation-4Regular', sans-serif;
-            font-size: 60px;
+            font-size: 52px;
             letter-spacing: 0.3px;
         }
 
